# cpp-tdd

./: CMakeLists.txt  README.md  old.vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
_project-template-catch/: CMakeLists.txt  main.cpp
_project-template-catch/src/: calculator.cpp
_project-template-catch/tests/: CMakeLists.txt  calculator_tests.cpp
_project-template-gtest/: CMakeLists.txt
_project-template-gtest/src/: CMakeLists.txt
_project-template-gtest/src/include/: calculator.hpp
_project-template-gtest/tests/: calculator_tests.cpp
catch-demo/tests/: CMakeLists.txt  source_tests.cpp
dependency-control/: CMakeLists.txt  main.cpp
dependency-control/src/include/: calculator.hpp
dependency-control/tests/: CMakeLists.txt  calculator_tests.cpp
document-editor/: ReadMe.md  main.cpp
document-editor/src/: application.hpp  clipboard.hpp  command.hpp
document-editor/tests/: application_tests.cpp
document-editor/tests/mocks/: mocks.hpp
googlemock-demo/tests/: CMakeLists.txt
legacy-to-testable-catch/: CMakeLists.txt  main.cpp
legacy-to-testable-catch/src/: CMakeLists.txt  data_analyzer.cpp  data_analyzer.hpp
legacy-to-testable-catch/tests/: CMakeLists.txt  data_analyzer_tests.cpp
tdd-katas/catch2/bowling-catch/: CMakeLists.txt  main.cpp
tdd-katas/catch2/bowling-catch/src/: bowling.cpp  bowling.hpp
tdd-katas/catch2/bowling-catch/tests/: CMakeLists.txt  bowling_tests.cpp
tdd-katas/catch2/mars-rover-catch/: CMakeLists.txt  main.cpp
tdd-katas/catch2/mars-rover-catch/src/: CMakeLists.txt  rover.cpp  rover.hpp
tdd-katas/catch2/mars-rover-catch/tests/: tests_mars_rover.cpp
tdd-katas/catch2/recently-used-list-catch/: README.md  main.cpp
tdd-katas/catch2/recently-used-list-catch/src/: recently_used_list.hpp
tdd-katas/catch2/recently-used-list-catch/tests/: recently_used_list_tests.cpp
tdd-katas/gtest/bowling/: ReadMe.md
tdd-katas/gtest/bowling/tests/: bowling_tests.cpp
tdd-katas/gtest/mars-rover/: CMakeLists.txt
tdd-katas/gtest/mars-rover/src/: rover.cpp  rover.hpp
tdd-katas/gtest/mars-rover/tests/: rover_tests.cpp
tdd-katas/gtest/recently-used-list/src/: recently_used_list.cpp  recently_used_list.hpp
tdd-katas/gtest/recently-used-list/tests/: recently_used_lists_tests.cpp
